[gd_scene load_steps=47 format=3 uid="uid://ca8ujpslwc6jb"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_2xrff"]
[ext_resource type="Texture2D" uid="uid://bs5tbcim7tphu" path="res://assets/animation/Attacks/ss_player_down_attack_v01.png" id="2_lw7cj"]
[ext_resource type="Texture2D" uid="uid://c0vw2piuqls2g" path="res://assets/animation/Attacks/SS_Player_side attack V01.png" id="3_2vvyv"]
[ext_resource type="Texture2D" uid="uid://bxn7bcefmsq2q" path="res://assets/animation/Attacks/SS_Player_up attack V01.png" id="4_xytkx"]
[ext_resource type="Texture2D" uid="uid://bv383ne7syo35" path="res://assets/animation/Player V02/SS_Player Directions/SS_PlayerV02_Down.png" id="5_enxk8"]
[ext_resource type="Texture2D" uid="uid://b477k70i1vws5" path="res://assets/animation/Player V02/SS_Player Directions/SS_PlayerV02_Side.png" id="6_407da"]
[ext_resource type="Texture2D" uid="uid://x0q2mw7jglgb" path="res://assets/animation/Player V02/SS_Player Directions/SS_PlayerV02_Up.png" id="7_ffobj"]
[ext_resource type="AudioStream" uid="uid://cmyjne42ssamy" path="res://assets/audio/FTS/A_FTS-1.ogg" id="8_qjsjq"]
[ext_resource type="AudioStream" uid="uid://cu83bb1p8dek0" path="res://assets/audio/FTS/A_FTS-2.ogg" id="9_0vp5p"]
[ext_resource type="AudioStream" uid="uid://dnk35wd2e6b0e" path="res://assets/audio/FTS/A_FTS-3.ogg" id="10_up21u"]
[ext_resource type="AudioStream" uid="uid://dpkp0pp5lyvcn" path="res://assets/audio/FTS/A_FTS-4.ogg" id="11_dn2qk"]
[ext_resource type="AudioStream" uid="uid://dv35hu6f11ixy" path="res://assets/audio/FTS/A_FTS-5.ogg" id="12_mr2f0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ycifs"]
atlas = ExtResource("2_lw7cj")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3faxj"]
atlas = ExtResource("2_lw7cj")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxynd"]
atlas = ExtResource("2_lw7cj")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kul63"]
atlas = ExtResource("2_lw7cj")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmk8t"]
atlas = ExtResource("3_2vvyv")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3b71"]
atlas = ExtResource("3_2vvyv")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm0jg"]
atlas = ExtResource("3_2vvyv")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo5wf"]
atlas = ExtResource("3_2vvyv")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g08t"]
atlas = ExtResource("4_xytkx")
region = Rect2(0, 0, 192, 193)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl4na"]
atlas = ExtResource("4_xytkx")
region = Rect2(192, 0, 192, 193)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sw3i"]
atlas = ExtResource("4_xytkx")
region = Rect2(384, 0, 192, 193)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtrdy"]
atlas = ExtResource("4_xytkx")
region = Rect2(576, 0, 192, 193)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e3g4c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ixjy"]
atlas = SubResource("CompressedTexture2D_e3g4c")
region = Rect2(640, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7edxg"]
atlas = SubResource("CompressedTexture2D_e3g4c")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uf54"]
atlas = SubResource("CompressedTexture2D_e3g4c")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_clxx4"]
atlas = SubResource("CompressedTexture2D_e3g4c")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_drdsq"]
atlas = ExtResource("5_enxk8")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujt8l"]
atlas = ExtResource("5_enxk8")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ktf5"]
atlas = ExtResource("5_enxk8")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2mry"]
atlas = ExtResource("5_enxk8")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2plgf"]
atlas = ExtResource("6_407da")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_28msg"]
atlas = ExtResource("6_407da")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a7bq"]
atlas = ExtResource("6_407da")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec7an"]
atlas = ExtResource("7_ffobj")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt08m"]
atlas = ExtResource("7_ffobj")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_65ooa"]
atlas = ExtResource("7_ffobj")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l3e6"]
atlas = ExtResource("7_ffobj")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttbmr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycifs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3faxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxynd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kul63")
}],
"loop": false,
"name": &"attack_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmk8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3b71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm0jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo5wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmk8t")
}],
"loop": false,
"name": &"attack_side",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g08t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sw3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtrdy")
}],
"loop": false,
"name": &"attack_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ixjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7edxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uf54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clxx4")
}],
"loop": true,
"name": &"new_walk_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drdsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujt8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ktf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2mry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drdsq")
}],
"loop": false,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [],
"loop": false,
"name": &"walk_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2plgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28msg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a7bq")
}],
"loop": false,
"name": &"walk_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec7an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt08m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65ooa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l3e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec7an")
}],
"loop": false,
"name": &"walk_up",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6otys"]
radius = 24.0
height = 106.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x21me"]
size = Vector2(52.375, 45.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxnnw"]
size = Vector2(36, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fqvy"]
size = Vector2(35, 20)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_g1o7g"]
streams_count = 5
stream_0/stream = ExtResource("8_qjsjq")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_0vp5p")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_up21u")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_dn2qk")
stream_3/weight = 1.0
stream_4/stream = ExtResource("12_mr2f0")
stream_4/weight = 1.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_2xrff")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ttbmr")
animation = &"walk_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 27)
shape = SubResource("CapsuleShape2D_6otys")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 24)

[node name="side_attack" type="CollisionShape2D" parent="Area2D"]
position = Vector2(49.8125, 4.125)
shape = SubResource("RectangleShape2D_x21me")
disabled = true

[node name="up_attack" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -49)
shape = SubResource("RectangleShape2D_bxnnw")
disabled = true

[node name="down_attack" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 58)
shape = SubResource("RectangleShape2D_3fqvy")
disabled = true

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_g1o7g")
volume_db = -20.0
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
